Fix: Update to Node.js 20 for Solana dependencies
- Add engines field to package.json requiring Node 20+
- Add nixpacks.toml to specify Node 20 and Python3
- Required for @solana/wallet-adapter and newer Solana packages

--- a/.env.production
+++ b/.env.production
@@ -4,9 +4,9 @@
 # Guardian API (Production - Railway)
 NEXT_PUBLIC_GUARDIAN_API_URL=https://aegis-guardian-production.up.railway.app
 
-# Solana Configuration (Mainnet)
-NEXT_PUBLIC_SOLANA_RPC_URL=https://api.mainnet-beta.solana.com
-NEXT_PUBLIC_SOLANA_NETWORK=mainnet-beta
+# Solana Configuration (Devnet)
+NEXT_PUBLIC_SOLANA_RPC_URL=https://api.devnet.solana.com
+NEXT_PUBLIC_SOLANA_NETWORK=devnet
 NEXT_PUBLIC_PROGRAM_ID=ET9WDoFE2bf4bSmciLL7q7sKdeSYeNkWbNMHbAMBu2ZJ
 
 # Optional: Custom RPC (Recommended for production - better rate limits)
