--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,5 +1,5 @@
 [phases.setup]
-nixPkgs = ["nodejs_20", "python3", "gcc", "gnumake", "pkg-config", "libudev-zero"]
+nixPkgs = ["nodejs_20", "python3", "gcc", "gnumake", "pkg-config", "systemd"]
 
 [phases.install]
 cmds = ["npm ci"]
