--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,5 +1,8 @@
+# Railway Nixpacks configuration for aegis-app
+# Minimal config without USB/hardware wallet support (not needed for cloud deployment)
+
 [phases.setup]
-nixPkgs = ["nodejs_20", "python3", "gcc", "gnumake", "pkg-config", "systemd", "systemd.dev", "udev"]
+nixPkgs = ["nodejs_20"]
 
 [phases.install]
 cmds = ["npm ci"]
