resolving deployment isue by removing usb dependency req

--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,4 @@
-optional=true
+# Skip optional dependencies to avoid USB build issues on Railway
+# USB is not needed for cloud deployment (no hardware wallet support)
+# This ensures npm install/ci skips optional dependencies by default
+optional=false
